# detect_face

mtcnn-light/: CMakeLists.txt
mtcnn-light/src/: main.cpp
